fixed layout bug for mobile on product page, added format currency to UAH hook

--- a/client/src/components/Product/Product.scss
+++ b/client/src/components/Product/Product.scss
@@ -28,10 +28,10 @@
   .product__price-section {
     display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
     max-width: 400px;
-    width: 80%;
-    margin: 30px 0;
+    width: 100%;
+    margin: 30px auto;
   }
 }
 
